# skk-mozc

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  flake.nix
modules/: home-manager.nix
nix/: cli.nix  e2e.nix  package.nix  tests.nix
patches/fcitx5-skk/: 0001-add-mozc-integration-hooks.patch
scripts/: build.sh  e2e-local.sh  sync-versions.sh  versions.env
skk/: user.dict
src/bunsetsu/: refiner.cpp  refiner.h
src/candidate_merger/: merger.cpp  merger.h
src/log/: log.cpp  log.h
src/mozc_client/: CMakeLists-cli.txt  cli_main.cpp  ipc_socket.cpp  ipc_socket.h  mozc_client.cpp  mozc_client.h
src/panel_dispatch/: panel_dispatch.cpp  panel_dispatch.h
src/proto/: .gitkeep
src/skk_integration/: mozc_integration.cpp  mozc_integration.h  yomi_extract.cpp  yomi_extract.h
src/util/: utf8.h  xdg.h
tests/: CMakeLists.txt  e2e_test.cpp  libskk_integration_test.cpp  panel_dispatch_test.cpp  scenarios.sh
